# dep_safe_agent

./: .gitignore  improve_suggest.md  market_research.md  pyproject.toml
src/depsafe/: __init__.py  agent.py  environment.py  exceptions.py  model.py
src/depsafe/config/: default.yaml
src/depsafe/run/: hello_world.py
src/depsafe/tool/: cve_checker.py  dep_parser.py  parser.py
tests/: test_agent.py
tests/parser/: test_parser.py
tests/tool/: test_cve_checker.py  test_dep_parser.py
