[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================
# [project] — 别人 pip install 你的包时读的元数据
# ============================================================
[project]
name = "depsafe"
version = "0.1.0"
description = "Python 依赖安全修复 Agent —— 检测 CVE 漏洞并自动生成安全兼容的升级方案"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "刘奎源", email = "your-email@example.com"},
]
keywords = ["agent", "security", "cve", "dependency", "python", "swe-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

# ---- 核心依赖 ----
dependencies = [
    "litellm>=1.50.0",     # 统一 LLM 调用接口
    "httpx>=0.27.0",       # 异步 HTTP 客户端，调 OSV API
    "click>=8.1.0",        # CLI 框架
    "jinja2>=3.1.0",       # system prompt 模板引擎
    "pyyaml>=6.0",         # 读 config YAML 文件
    "fastapi>=0.139.2",
    "orjson>=3.11.9",
    "typer>=0.27.0",
]

# ---- 可选依赖 ----
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
    "pip-audit>=2.7.0",
]
eval = [
    "pandas>=2.0.0",       # 评估数据处理
    "tabulate>=0.9.0",     # 表格化输出评估结果
]

# ---- 入口点：装完包后终端直接敲 depsafe ----
[project.scripts]
depsafe = "depsafe.cli:main"

# ---- 项目链接 ----
[project.urls]
Homepage = "https://github.com/83jjjjj/dep_safe"
Repository = "https://github.com/83jjjjj/dep_safe"
Issues = "https://github.com/83jjjjj/dep_safe/issues"

# ============================================================
# [tool.hatch.build.targets.wheel] — 打包配置
# ============================================================
[tool.hatch.build.targets.wheel]
packages = ["src/depsafe"]

# ============================================================
# [tool.ruff] — 代码风格/lint 配置
# ============================================================
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (未使用的 import 等)
    "I",   # isort (import 排序)
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["depsafe"]

# ============================================================
# [tool.pytest.ini_options] — 测试配置
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: 需要真实 LLM 调用的慢测试（默认跳过）",
    "eval: 评估相关的测试（需要 CVE 数据集）",
    "integration: 集成测试（需要真实 LLM + 网络）",
]
addopts = "-v --strict-markers"

# ============================================================
# [tool.depsafe] — 你自己项目的专属配置
# ============================================================
[tool.depsafe]
default_model = "deepseek/deepseek-chat"
max_steps = 10
max_tokens = 100000
osv_api_url = "https://api.osv.dev/v1"
